Fix: Bad layout for "Loading..." message on Safari 16 in MacOS 12

--- a/openxava/src/main/resources/META-INF/resources/xava/style/base.css
+++ b/openxava/src/main/resources/META-INF/resources/xava/style/base.css
@@ -323,7 +323,8 @@ input[type="checkbox"] {
 	z-index: 9999999; 
 	position: fixed; 
 	top: -1px; 
-	left: calc(50% - 45px); 	 
+	left: calc(50% - 45px); 	
+	white-space: nowrap; 
 }
 
 #xava_loading, #xava_loading i {
